fix project texts having more width than picture and too big project images

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -154,6 +154,7 @@ main {
 
 .project {
   width: 100%;
+  max-width: 1100px;
   display: flex;
   flex-direction: column;
   align-items: center;
